--- a/src/index.css
+++ b/src/index.css
@@ -450,6 +450,7 @@
     font-family: Space Grotesk, sans-serif;
   }
 
+  html,
   *,
   a,
   button {
